# final_project

./: .gitignore  CMakeLists.txt  README.md
cpp/include/: file_reader.hpp  file_writer.hpp  frame.hpp  module.hpp  photon_propagator.hpp  tray.hpp  write.hpp
cpp/src/: frame.cpp  run.cpp
resources/models/SpiceHD/: GCDModifier.py
resources/models/spice_3.1/: cfg.txt
resources/models/spice_3.2.1/: cfg.txt
